# home-dashboard

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/home_dashboard/: app.py  bus_api.py  config.py  weather_api.py
src/home_dashboard/templates/: dashboard.html
